// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UPortButton component sanity matches default snapshot 1`] = `
<Styled(Styled(Styled(styled.div)))
  as="button"
  bg="silver"
  border="none"
  borderRadius={1}
  boxShadow={1}
  color="white"
  contrastColor="white"
  fontFamily="sansSerif"
  fontSize="inherit"
  fontWeight={3}
  height="3rem"
  lineHeight={1}
  mainColor="primary"
  minWidth="3rem"
  position="relative"
  px={4}
  py={0}
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "breakpoints": Array [
        "40em",
        "52em",
        "64em",
      ],
      "buttonSizes": Object {
        "large": Object {
          "fontSize": "1.5rem",
          "height": "4rem",
          "minWidth": "4rem",
        },
        "medium": Object {
          "fontSize": "1rem",
          "height": "3rem",
          "minWidth": "3rem",
        },
        "small": Object {
          "fontSize": "0.75rem",
          "height": "2rem",
          "minWidth": "2rem",
          "padding": "0 1rem",
        },
      },
      "buttons": Object {
        "danger": Object {
          "--contrast-color": "#fff",
          "--main-color": "#DC2C10",
        },
        "primary": Object {
          "--contrast-color": "#fff",
          "--main-color": "#4E3FCE",
          "backgroundColor": "#4E3FCE",
          "color": "#fff",
        },
        "success": Object {
          "--contrast-color": "#FFF",
          "--main-color": "#28C081",
        },
      },
      "colors": Object {
        "background": "#fff",
        "black": "#000",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#3259D6",
        "danger": "#DC2C10",
        "dark-gray": "#333",
        "grey": "#CCC",
        "info": "#36ADF1",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "primary-dark": "#3e32a4",
        "primary-light": "#7165d7",
        "silver": "#999",
        "success": "#28C081",
        "text": "#3F3D4B",
        "transparent": "transparent",
        "warning": "#FD9D28",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "mono": "\\"Source Code Pro\\", -apple-system, monospace",
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f4f4f4",
          "borderColor": "#aaa",
          "color": "#555",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
        "32px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0px 8px 16px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  width={
    Array [
      1,
      "auto",
    ]
  }
>
  <ButtonBody />
</Styled(Styled(Styled(styled.div)))>
`;

exports[`UPortButton component sanity matches themed snapshot 1`] = `
<ThemeProvider
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "breakpoints": Array [
        "40em",
        "52em",
        "64em",
      ],
      "buttonSizes": Object {
        "large": Object {
          "fontSize": "1.5rem",
          "height": "4rem",
          "minWidth": "4rem",
        },
        "medium": Object {
          "fontSize": "1rem",
          "height": "3rem",
          "minWidth": "3rem",
        },
        "small": Object {
          "fontSize": "0.75rem",
          "height": "2rem",
          "minWidth": "2rem",
          "padding": "0 1rem",
        },
      },
      "buttons": Object {
        "danger": Object {
          "--contrast-color": "#fff",
          "--main-color": "#DC2C10",
        },
        "primary": Object {
          "--contrast-color": "#fff",
          "--main-color": "#4E3FCE",
          "backgroundColor": "#4E3FCE",
          "color": "#fff",
        },
        "success": Object {
          "--contrast-color": "#FFF",
          "--main-color": "#28C081",
        },
      },
      "colors": Object {
        "background": "#fff",
        "black": "#000",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#3259D6",
        "danger": "#DC2C10",
        "dark-gray": "#333",
        "grey": "#CCC",
        "info": "#36ADF1",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "primary-dark": "#3e32a4",
        "primary-light": "#7165d7",
        "silver": "#999",
        "success": "#28C081",
        "text": "#3F3D4B",
        "transparent": "transparent",
        "warning": "#FD9D28",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "mono": "\\"Source Code Pro\\", -apple-system, monospace",
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f4f4f4",
          "borderColor": "#aaa",
          "color": "#555",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
        "32px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0px 8px 16px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
>
  <UPortButton
    bg="silver"
    border="none"
    borderRadius={1}
    boxShadow={1}
    color="white"
    contrastColor="white"
    fontFamily="sansSerif"
    fontSize="inherit"
    fontWeight={3}
    height="3rem"
    lineHeight={1}
    mainColor="primary"
    minWidth="3rem"
    position="relative"
    px={4}
    py={0}
    width={
      Array [
        1,
        "auto",
      ]
    }
  />
</ThemeProvider>
`;
